--- a/_sass/uno.scss
+++ b/_sass/uno.scss
@@ -1,4 +1,4 @@
-@import 'https://fonts.googleapis.com/css?family=Raleway:400,700|Roboto+Slab:300,400)';
+@import 'https://fonts.googleapis.com/css?family=Roboto+Slab:300,400)';
 /* http://meyerweb.com/eric/tools/css/reset/
 	 v2.0 | 20110126
 	 License: none (public domain)
@@ -1557,9 +1557,7 @@ input[type="tel"] {
 	input[type="tel"]:-ms-input-placeholder {
 		color: #cccccc; }
 
-@media all and (min-width: 1300px) {
-	.content-wrapper {
-		margin-left: 530px; } }
+
 @media all and (max-width: 1100px) {
 	.panel-cover__logo {
 		width: 70px; }
