--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
-    {% include header.html %}
+<body>
+  {% include header.html %}
 
-    <div class="content-wrapper">
-      <div class="content-wrapper__inner">
-        {{ content }}
-      </div>
-
-      {% include footer.html %}
+  <div class="content-wrapper">
+    <div class="content-wrapper__inner">
+      {{ content }}
     </div>
-  </body>
+
+    {% include footer.html %}
+    {% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+    {% endif %}
+  </div>
+</body>
+
 </html>
